--- a/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
@@ -23,7 +23,7 @@
     <string name="passport_reg_new">Crea Mi Account</string>
     <string name="passport_error_empty_username">Inserisci il nome utente</string>
     <string name="passport_error_empty_pwd">Inserisci la password</string>
-    <string name="passport_error_invalid_phone_num">Numero di teefono non valido</string>
+    <string name="passport_error_invalid_phone_num">Numero di telefono non valido</string>
     <string name="passport_error_empty_phone_num">Inserisci numero di telefono</string>
     <string name="passport_error_illegal_pwd">Password non valida</string>
     <string name="passport_error_empty_captcha_code">Inserisci_il captcha</string>
@@ -34,7 +34,7 @@
     <string name="passport_reg_type_email">Crea un account utilizzato con la email</string>
     <string name="passport_reg_using_phone_number_prompt">Registrati con il numero di telefono</string>
     <string name="passport_reg_using_other_phone_number_prompt">Registrati con il numero di telefono</string>
-    <string name="passport_reg_using_other_phone">egistrati con un altro numero di telefono</string>
+    <string name="passport_reg_using_other_phone">Registrati con un altro numero di telefono</string>
     <string name="passport_reg_via_sms_alert">"L'SMS di attivazione è soggetto ai normali costi preavvisi dal tuo operatore."</string>
     <string name="passport_reg_sms_send_prompt">Invia il codice di verifica a %s</string>
     <string name="passport_password_req_notice">La pasword deve essere di 8-16 caratteri ed includere numeri e lettere (case sensitive).</string>
@@ -52,13 +52,13 @@ Per attivare il tuo account, segui il
     <string name="passport_title_reg">Crea un account</string>
     <string name="passport_error_no_sms_service">Impossibile inviare SMS. Rete mobile non disponibile.</string>
     <string name="passport_reg_failed">"Impossibile impostare l'account"</string>
-    <string name="passport_login_instead_reg">Utilizza questo nuemro</string>
+    <string name="passport_login_instead_reg">Utilizza questo numero</string>
     <string name="passport_login_instead_reg_with_email">Utilizza questa Email</string>
     <string name="passport_get_back_pwd">Recupera password</string>
     <string name="passport_login_failed">Impossibile accedere</string>
     <string name="passport_verification_failed">Autenticazione fallita</string>
     <string name="passport_error_network">Impossibile connettersi alla rete</string>
-    <string name="passport_error_ssl_hand_shake">"Errore nella connessione con iil server. Prova ad impostare correttaemnte l'orario di sistema."</string>
+    <string name="passport_error_ssl_hand_shake">"Errore nella connessione con il server. Prova ad impostare correttamente l'orario di sistema."</string>
     <string name="passport_error_device_id">"Impossibile recuperare l'ID del telefono"</string>
     <string name="passport_error_dup_phone">Questo numero di telefono è già associato con un altro account</string>
     <string name="passport_error_phone_error">Numero non valido</string>
@@ -68,7 +68,7 @@ Per attivare il tuo account, segui il
     <string name="passport_error_invalid_dev_id">ID non valido</string>
     <string name="passport_error_user_name">Nome utente non valido</string>
     <string name="passport_error_verify_code">Il codice inserito non è corretto</string>
-    <string name="passport_error_dup_email">Questa email è già associata ad un altro acocunt</string>
+    <string name="passport_error_dup_email">Questa email è già associata ad un altro account</string>
     <string name="passport_error_login">Impossibile accedere</string>
     <string name="passport_relogin_notice">Devi accedere di nuovo</string>
     <string name="passport_quick_login_title">Inserisci la password</string>
@@ -97,7 +97,7 @@ Per attivare il tuo account, segui il
     <string name="passport_user_agreement">Accordo Utente</string>
     <string name="passport_loading">Caricamento…</string>
     <string name="passport_license_host_unreachable">"Impossibile connettersi alla rete. Puoi vedere questa pagina a %s."</string>
-    <string name="passport_skip_setup_account_title">Salta confgurazione</string>
+    <string name="passport_skip_setup_account_title">Salta configurazione</string>
     <string name="passport_skip_setup_account_msg">Puoi impostare un Mi Account più tardi nelle Impostazioni.</string>
     <string name="passport_xiaomi_account_dspt">Utilizza il tuo Mi Account per accedere da qualsiasi dispositivo a Mi Cloud, MIUI Theme Store ed altri servizi Xiaomi.</string>
     <string name="passport_xiaomi_account_sec_dspt" />
@@ -105,14 +105,14 @@ Per attivare il tuo account, segui il
     <string name="passport_remove_unactivated_account_notice">Il tuo account non è stato attivato</string>
     <string name="passport_remove_confirm">Esci</string>
     <string name="passport_find_password_on_web_msg">Visita account.mi.com per reimpostare la tua password.</string>
-    <string name="passport_relogin">Accedi di nuvo</string>
+    <string name="passport_relogin">Accedi di nuovo</string>
     <string name="passport_skip_login">"Salta l'accesso"</string>
     <string name="passport_checking_account">Verifica password…</string>
     <string name="passport_button_cancel">Annulla</string>
     <string name="passport_wrong_captcha">Il codice inserito non è corretto</string>
     <string name="passport_wrong_vcode">Il codice inserito non è corretto</string>
     <string name="passport_trust_device">Fidati di questo dispositivo</string>
-    <string name="passport_vcode_prompt_long">Inserisi il codice di sicurezza generato dal tuo Mi Security token</string>
+    <string name="passport_vcode_prompt_long">Inserisci il codice di sicurezza generato dal tuo Mi Security token</string>
     <string name="passport_vcode_notification_title">La tua verifica di accesso è incompleta</string>
     <string name="passport_checking_input">Verifica in corso…</string>
     <string name="passport_login_title">Accedi al tuo Mi Account</string>
@@ -122,7 +122,7 @@ Per attivare il tuo account, segui il
     <string name="passport_input_phone_hint">Inserisci il numero di telefono</string>
     <string name="passport_input_verify_code_hint">Inserisci il codice di verifica</string>
     <string name="passport_wrong_phone_number_format">Il formato del numero inserito non è valido</string>
-    <string name="passport_btn_return">Inditero</string>
+    <string name="passport_btn_return">Indietro</string>
     <string name="passport_re_register">Accedi di nuovo</string>
     <string name="passport_skip_register">Salta la registrazione</string>
     <string name="passport_account_not_activated">Account non attivato</string>
@@ -187,7 +187,7 @@ Per attivare il tuo account, segui il
     <string name="micloud_area_code_title">Prefisso internazionale</string>
     <string name="user_agreement_p2"><u>Termini di Servizio</u></string>
     <string name="user_agreement_p3"> e  </string>
-    <string name="user_agreement_p4"><u>Policy sulla privacy</u></string>
+    <string name="user_agreement_p4"><u>Informativa sulla privacy</u></string>
     <string name="user_agreement_p6">"Stai dando il tuo consenso a "</string>
     <string name="privacy_policy">Accordo sulla Privacy</string>
     <string name="user_agreement">Accordo Utente</string>
@@ -267,18 +267,18 @@ Per attivare il tuo account, segui il
     <string name="cloud_service_dspt">Sincronizza foto, contatti, note, app e molto altro su tutti i tuoi dispositivi.</string>
     <string name="theme_store">MIUI Themes Store</string>
     <string name="theme_store_dspt">Scegli il tuo look. Centinaia di temi grtuiti personalizzabili per rendere unico il tuo telefono.</string>
-    <string name="mi_account_dspt_provision">"Accedi a Mi Cloud, MIUI Theme Store, and other Mi services, from anywhere. "</string>
+    <string name="mi_account_dspt_provision">"Accedi a Mi Cloud, MIUI Theme Store ed altri servizi Mi da qualunque posizione. "</string>
     <string name="authorize_title">Autorizzazione</string>
-    <string name="my_device_title">Dispositvo attuale</string>
+    <string name="my_device_title">Dispositivo attuale</string>
     <string name="device_list_title">Lista dispositivi</string>
     <string name="device_list__header">I miei dispositivi</string>
     <string name="device_trust_info">Dispositivi sicuri</string>
     <string name="rename_current_device">Cambia nome dispositivo</string>
-    <string name="about_device_info">MOstra dettagli sìdispositivo</string>
+    <string name="about_device_info">Mostra dettagli dispositivo</string>
     <string name="other_devices">Altri dispositivi</string>
-    <string name="remove_trust_notice">RImuovi dai dispositvi sicuri ed esci</string>
+    <string name="remove_trust_notice">RImuovi dai dispositivi sicuri ed esci</string>
     <string name="remove_trust_btn">Rimuovi dai dispositivi sicuri</string>
-    <string name="delete_device_notice">"Dopo la rimozione del dispositvo, verrà automaticamente effettuata l'usicta dal Mi Account. Non potrai più utilizzare questo telefono epr accedere alle tue foto, messaggi o ad altro contenuto archiviato su questo dispositivo."</string>
+    <string name="delete_device_notice">"Dopo la rimozione del dispositivo, verrà automaticamente effettuata l'uscita dal Mi Account. Non potrai più utilizzare questo telefono per accedere alle tue foto, messaggi o ad altro contenuto archiviato su questo dispositivo."</string>
     <string name="delete_device_btn">Rimuovi</string>
     <string name="phone_activated">%s attivato</string>
     <string name="phone_unactivated">Non attivato</string>
