--- a/Italian/main/Updater.apk/res/values-it/strings.xml
+++ b/Italian/main/Updater.apk/res/values-it/strings.xml
@@ -104,7 +104,7 @@
     <string name="auto_check_clause_msg">"Devi accettare l'Informativa sulla Privacy prima di aggiornare. "</string>
     <string name="auto_check_clause_button">Leggi</string>
     <string name="auto_agree_clause">"La nostra nuova Informativa sulla Privacy Privacy Policy è già valida. "</string>
-    <string name="auto_dialog_title_check_again">Annullare aggiornaemnto?</string>
+    <string name="auto_dialog_title_check_again">Annullare aggiornamento?</string>
     <string name="auto_dialog_msg_check_again">"evi accettare l'Informativa sulla Privacy prima di aggiornare. "</string>
     <string name="auto_button_examine_immediately">Leggi</string>
     <string name="auto_button_sure_cancel">Annulla</string>
@@ -151,7 +151,7 @@
     <string name="on_checking">Cerca aggiornamento</string>
     <string name="auto_update">Aggiorna automaticamente</string>
     <string name="update_downfull_no_info_title">Impossibile scaricare</string>
-    <string name="update_downfull_no_info_sum">Impossibile scaricare, controlla di nuovo con il tasto di aggiornaemnto.</string>
+    <string name="update_downfull_no_info_sum">Impossibile scaricare, controlla di nuovo con il tasto di aggiornamento.</string>
     <string name="set_auto_update_title">Lancia aggiornamenti automaticamente</string>
     <string name="set_auto_msg">Quando viene rilevata una nuova versione non devi aggiornare manualmente, il sistema sceglierà il momento migliore per aggiornare, sotto copertura rete Wi-Fi.</string>
     <string name="open_now">Installa adesso</string>
