--- a/Italian/main/Updater.apk/res/values-it/strings.xml
+++ b/Italian/main/Updater.apk/res/values-it/strings.xml
@@ -103,7 +103,7 @@
     <string name="auto_button_examine">Leggi</string>
     <string name="auto_check_clause_msg">"Devi accettare l'Informativa sulla Privacy prima di aggiornare. "</string>
     <string name="auto_check_clause_button">Leggi</string>
-    <string name="auto_agree_clause">"La nostra nuova Informativa sulla Privacy Privacy Policy è già valida. "</string>
+    <string name="auto_agree_clause">"La nostra nuova Informativa sulla privacy è entrata in vigore. "</string>
     <string name="auto_dialog_title_check_again">Annullare aggiornamento?</string>
     <string name="auto_dialog_msg_check_again">"evi accettare l'Informativa sulla Privacy prima di aggiornare. "</string>
     <string name="auto_button_examine_immediately">Leggi</string>
